Bug 500518 - Update fennec login screen to use richpref styling Use a richlistbox with richpref styling for input/buttons like the rest of the weave prefs. Hide password/passphrase after entering, but keep them visible when entering for the first time.

--- a/chrome/content/fennec.css
+++ b/chrome/content/fennec.css
@@ -56,11 +56,14 @@ richlistitem[type="remotetab"] {
 }
 
 #weave-detail-prefs-pane button,
-#weave-detail-prefs-pane textbox {
+#weave-detail-prefs-pane textbox,
+#weave-detail-connect-pane button,
+#weave-detail-connect-pane textbox {
     width: 16em;
 }
 
-#weave-detail-prefs-pane textbox {
+#weave-detail-prefs-pane textbox,
+#weave-detail-connect-pane textbox {
     font-size: 1em !important;
     padding: .3em 0;
 }
